Changed address of web site

--- a/info.plist
+++ b/info.plist
@@ -492,6 +492,6 @@ THE SOFTWARE.</string>
 		</dict>
 	</dict>
 	<key>webaddress</key>
-	<string>http://www.alfredforum.com/topic/1805-share-using-mountain-lion-built-in-sharing-version-19/</string>
+	<string>https://github.com/vdesabou/alfred-mountain-lion-builtin-sharing</string>
 </dict>
 </plist>
